# QL6502

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.osc.md  README_CN.md
src/: Build.c  Pack.c  QL6502.h  XD6502.c  main.c
vsproject/: QL6502.sln  QL6502.vcxproj
